--- a/src/views/pages/malaysia/ewallettransfer.html
+++ b/src/views/pages/malaysia/ewallettransfer.html
@@ -53,7 +53,7 @@
         
             <div class="flex items-center justify-between p-4 border-b border-white/20">
                 <a href="#" class="flex items-center gap-2 font-semibold tracking-wider">
-                    <img src="../../../assets/images/logo.png" alt="Logo" class="h-8 w-auto">
+                    <img src="../../../../assets/images/logo.png" alt="Logo" class="h-8 w-auto">
                 </a>
 
                 <!-- <button id="closeSidebarBtn" class="hidden lg:block p-1">
@@ -89,17 +89,17 @@
                                 </li>
                                 <li>
                                     <a href="./order.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Orders
+                                        Pesanan
                                     </a>
                                 </li>
                                 <li>
                                     <a href="./changepassword.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Change Password
+                                        Tukar Password
                                     </a>
                                 </li>
                                 <li>
                                     <a href="./supportticket.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Support Ticket
+                                        Tiket Sokongan
                                     </a>
                                 </li>
                                 <li>
@@ -172,12 +172,12 @@
                             <ul id="withdrawMenu" class="hidden mt-2 ml-5 space-y-1">
                                 <li>
                                     <a href="./withdrawmoney.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Withdraw Money
+                                        Keluarkan Wang
                                     </a>
                                 </li>
                                 <li>
                                     <a href="./withdrawhistory.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Withdraw History
+                                        Riwayat Keluarkan
                                     </a>
                                 </li>
                             </ul>
@@ -190,7 +190,7 @@
                                     <path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z" />
                                     <path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z" clip-rule="evenodd" />
                                 </svg>
-                                <span>Products</span>
+                                <span>Produk</span>
                             </a>
                         </li>
 
@@ -199,7 +199,7 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                     <path fill-rule="evenodd" d="M5 5a3 3 0 015.14-2.502A3.001 3.001 0 0115 5v2a2 2 0 011 1.732V15a2 2 0 01-2 2H6a2 2 0 01-2-2V8.732A2 2 0 015 7V5zm5-2.45a1 1 0 00-1.414.07L8.293 3.586A3 3 0 016 5V7h8V5a3 3 0 01-2.293-1.014L11.414 2.62a1 1 0 00-1.414-.07zM6 9a1 1 0 011-1h6a1 1 0 011 1v5a1 1 0 01-1 1H7a1 1 0 01-1-1V9z" clip-rule="evenodd" />
                                 </svg>
-                                <span>Rewards</span>
+                                <span>Ganjaran</span>
                             </a>
                         </li>
 
@@ -219,7 +219,7 @@
                                         <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
                                         <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z" />
                                     </svg>
-                                    <span>Transactions</span>
+                                    <span>Transaksi</span>
                                 </div>
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
                             </a>
@@ -241,7 +241,7 @@
                                 </li>
                                 <li>
                                     <a href="./walletconversion.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Wallet Conversion
+                                        Penukaran Wallet
                                     </a>
                                 </li>
                             </ul>
@@ -263,7 +263,7 @@
                             <ul id="referralsMenu" class="hidden mt-2 ml-5 space-y-1">
                                 <li>
                                     <a href="./sponsortree.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Sponsor Tree
+                                        Pokok Penaja
                                     </a>
                                 </li>
                                 <li>
@@ -273,7 +273,7 @@
                                 </li>
                                 <li>
                                     <a href="./myreferralcommisions.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Referrals Commissions
+                                        Komisen Rujukan
                                     </a>
                                 </li>
                                 <li>
@@ -288,12 +288,12 @@
                                 </li>
                                 <li>
                                     <a href="./newregiatration.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        New Registration
+                                        Pendaftaran Baru
                                     </a>
                                 </li>
                                 <li>
                                     <a href="./activateuser.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Activate User
+                                        Pengguna Aktif
                                     </a>
                                 </li>
                             </ul>
@@ -330,28 +330,28 @@
                                 Username
                                 <span class="text-red-500">*</span>
                             </label>
-                            <input type="text" id="username" name="username" placeholder="Enter Username" class="mt-1 block w-full py-2 px-3 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-custom-teal focus:border-custom-teal sm:text-sm">
+                            <input type="text" id="username" name="username" placeholder="Masukan Username" class="mt-1 block w-full py-2 px-3 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-custom-teal focus:border-custom-teal sm:text-sm">
                         </div>
                         
                         <div>
                             <label for="amount" class="block text-sm font-medium text-gray-700">
-                                Amount (Charge: 0.00 MYR + 0.00 %)
+                                Jumlah (Charge: 0.00 MYR + 0.00 %)
                                 <span class="text-red-500">*</span>
                             </label>
                             <div class="mt-1 relative rounded-md shadow-sm">
                                 
-                                <input type="text" name="amount" id="amount" class="block w-full pl-3 pr-12 sm:text-sm border-gray-300 rounded-md focus:ring-custom-teal focus:border-custom-teal py-2" placeholder="Enter Amount">
+                                <input type="text" name="amount" id="amount" class="block w-full pl-3 pr-12 sm:text-sm border-gray-300 rounded-md focus:ring-custom-teal focus:border-custom-teal py-2" placeholder="Masukan Jumlah">
                                 
                                 <div class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none">
                                     <span class="text-gray-500 sm:text-sm">MYR</span>
                                 </div>
                             </div>
-                            <p class="mt-2 text-xs text-gray-500">Amount Will Cut From Your Account</p>
+                            <p class="mt-2 text-xs text-gray-500">Amaun Akan Dipotong Daripada Akaun Anda</p>
                         </div>
 
                         <div>
                             <label for="password" class="block text-sm font-medium text-gray-700">
-                                Your Password
+                                Password Kamu
                                 <span class="text-red-500">*</span>
                             </label>
                             <input type="password" name="password" id="password" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-custom-teal focus:border-custom-teal sm:text-sm">
