--- a/src/views/pages/malaysia/planadmin.html
+++ b/src/views/pages/malaysia/planadmin.html
@@ -54,7 +54,7 @@
         
             <div class="flex items-center justify-between p-4 border-b border-white/20">
                 <a href="#" class="flex items-center gap-2 font-semibold tracking-wider">
-                    <img src="../../../assets/images/logo.png" alt="Logo" class="h-8 w-auto">
+                    <img src="../../../../assets/images/logo.png" alt="Logo" class="h-8 w-auto">
                 </a>
 
                 <!-- <button id="closeSidebarBtn" class="hidden lg:block p-1">
@@ -90,17 +90,17 @@
                                 </li>
                                 <li>
                                     <a href="./order.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Orders
+                                        Pesanan
                                     </a>
                                 </li>
                                 <li>
                                     <a href="./changepassword.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Change Password
+                                        Tukar Password
                                     </a>
                                 </li>
                                 <li>
                                     <a href="./supportticket.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Support Ticket
+                                        Tiket Sokongan
                                     </a>
                                 </li>
                                 <li>
@@ -135,7 +135,7 @@
                                         <path d="M4 4a2 2 0 00-2 2v1h16V6a2 2 0 00-2-2H4z" />
                                         <path fill-rule="evenodd" d="M18 9H2v5a2 2 0 002 2h12a2 2 0 002-2V9zM4 13a1 1 0 011-1h1a1 1 0 110 2H5a1 1 0 01-1-1zm5-1a1 1 0 100 2h1a1 1 0 100-2H9z" clip-rule="evenodd" />
                                     </svg>
-                                    <span>Topup</span>
+                                    <span>TopUp</span>
                                 </div>
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 transition-transform duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
@@ -145,12 +145,12 @@
                             <ul id="topupMenu" class="hidden mt-2 ml-5 space-y-1">
                                 <li>
                                     <a href="./topupwallet.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        TopUp Wallet
+                                        Kaedah TopUp
                                     </a>
                                 </li>
                                 <li>
                                     <a href="./topuphistory.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        TopUp Wallet History
+                                        Riwayat Dompet TopUp
                                     </a>
                                 </li>
                             </ul>
@@ -173,12 +173,12 @@
                             <ul id="withdrawMenu" class="hidden mt-2 ml-5 space-y-1">
                                 <li>
                                     <a href="./withdrawmoney.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Withdraw Money
+                                        Keluarkan Wang
                                     </a>
                                 </li>
                                 <li>
                                     <a href="./withdrawhistory.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Withdraw History
+                                        Riwayat Keluarkan
                                     </a>
                                 </li>
                             </ul>
@@ -191,7 +191,7 @@
                                     <path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z" />
                                     <path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z" clip-rule="evenodd" />
                                 </svg>
-                                <span>Products</span>
+                                <span>Produk</span>
                             </a>
                         </li>
 
@@ -200,7 +200,7 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                     <path fill-rule="evenodd" d="M5 5a3 3 0 015.14-2.502A3.001 3.001 0 0115 5v2a2 2 0 011 1.732V15a2 2 0 01-2 2H6a2 2 0 01-2-2V8.732A2 2 0 015 7V5zm5-2.45a1 1 0 00-1.414.07L8.293 3.586A3 3 0 016 5V7h8V5a3 3 0 01-2.293-1.014L11.414 2.62a1 1 0 00-1.414-.07zM6 9a1 1 0 011-1h6a1 1 0 011 1v5a1 1 0 01-1 1H7a1 1 0 01-1-1V9z" clip-rule="evenodd" />
                                 </svg>
-                                <span>Rewards</span>
+                                <span>Ganjaran</span>
                             </a>
                         </li>
 
@@ -220,7 +220,7 @@
                                         <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
                                         <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z" />
                                     </svg>
-                                    <span>Transactions</span>
+                                    <span>Transaksi</span>
                                 </div>
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
                             </a>
@@ -242,7 +242,7 @@
                                 </li>
                                 <li>
                                     <a href="./walletconversion.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Wallet Conversion
+                                        Penukaran Wallet
                                     </a>
                                 </li>
                             </ul>
@@ -264,7 +264,7 @@
                             <ul id="referralsMenu" class="hidden mt-2 ml-5 space-y-1">
                                 <li>
                                     <a href="./sponsortree.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Sponsor Tree
+                                        Pokok Penaja
                                     </a>
                                 </li>
                                 <li>
@@ -274,7 +274,7 @@
                                 </li>
                                 <li>
                                     <a href="./myreferralcommisions.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Referrals Commissions
+                                        Komisen Rujukan
                                     </a>
                                 </li>
                                 <li>
@@ -289,12 +289,12 @@
                                 </li>
                                 <li>
                                     <a href="./newregiatration.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        New Registration
+                                        Pendaftaran Baru
                                     </a>
                                 </li>
                                 <li>
                                     <a href="./activateuser.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
-                                        Activate User
+                                        Pengguna Aktif
                                     </a>
                                 </li>
                             </ul>
@@ -325,7 +325,7 @@
                 <div class="bg-custom-biru text-white max-w-sm w-full rounded-2xl shadow-lg text-center p-6">
                     <h2 class="text-xl font-bold tracking-wider mb-4">SEED YOGU VENTURE</h2>
                     <div class="bg-gray-100 text-gray-800 rounded-xl p-6 mb-4 shadow-inner">
-                        <img src="../../../assets/images/logo.png" alt="Kongsi Niaga Logo" class="h-12 mx-auto mb-4">
+                        <img src="../../../../assets/images/logo.png" alt="Kongsi Niaga Logo" class="h-12 mx-auto mb-4">
                         <div class="font-extrabold text-4xl leading-tight tracking-wider text-custom-teal-dark">
                             <p>SEED</p>
                             <p>YOGU</p>
@@ -334,8 +334,8 @@
                     </div>
                     <p class="text-5xl font-bold my-4">RM360</p>
                     <div class="mt-4">
-                        <p class="font-semibold">Daftar Sebagai Agent Jualan Kami</p>
-                        <p class="text-sm">Dan Potensi Pendapatan SEHINGGA RM3,600.00</p>
+                        <p class="font-semibold">Daftar Sebagai Ejen Jualan Kami</p>
+                        <p class="text-sm">Dan Potensi Pendapatan JADI RM3,600.00</p>
                     </div>
                     <hr class="my-6 border-white/40">
                     <p class="text-xs font-light tracking-widest">
