--- a/src/views/pages/newregiatration.html
+++ b/src/views/pages/newregiatration.html
@@ -134,7 +134,7 @@
                                         <path d="M4 4a2 2 0 00-2 2v1h16V6a2 2 0 00-2-2H4z" />
                                         <path fill-rule="evenodd" d="M18 9H2v5a2 2 0 002 2h12a2 2 0 002-2V9zM4 13a1 1 0 011-1h1a1 1 0 110 2H5a1 1 0 01-1-1zm5-1a1 1 0 100 2h1a1 1 0 100-2H9z" clip-rule="evenodd" />
                                     </svg>
-                                    <span>Topup</span>
+                                    <span>TopUp</span>
                                 </div>
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 transition-transform duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
@@ -199,7 +199,7 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                     <path fill-rule="evenodd" d="M5 5a3 3 0 015.14-2.502A3.001 3.001 0 0115 5v2a2 2 0 011 1.732V15a2 2 0 01-2 2H6a2 2 0 01-2-2V8.732A2 2 0 015 7V5zm5-2.45a1 1 0 00-1.414.07L8.293 3.586A3 3 0 016 5V7h8V5a3 3 0 01-2.293-1.014L11.414 2.62a1 1 0 00-1.414-.07zM6 9a1 1 0 011-1h6a1 1 0 011 1v5a1 1 0 01-1 1H7a1 1 0 01-1-1V9z" clip-rule="evenodd" />
                                 </svg>
-                                <span>Rewards</span>
+                                <span>Ganjaran</span>
                             </a>
                         </li>
 
