--- a/src/views/pages/malaysia/supportticket.html
+++ b/src/views/pages/malaysia/supportticket.html
@@ -24,6 +24,20 @@
             }
         }
     </script>
+        <style>
+    /* Menambahkan style untuk transisi yang lebih mulus pada main content */
+    #mainContentWrapper { /* Sebaiknya targetkan ID wrapper agar lebih konsisten */
+        transition: margin-left 0.3s ease-in-out;
+    }
+    /* CSS untuk menyembunyikan scrollbar pada elemen */
+    .scrollbar-hide::-webkit-scrollbar {
+        display: none; /* Untuk Chrome, Safari, dan Opera */
+    }
+    .scrollbar-hide {
+        -ms-overflow-style: none;  /* Untuk IE dan Edge */
+        scrollbar-width: none;  /* Untuk Firefox */
+    }
+    </style>
     <style>
         /* Menambahkan style untuk transisi yang lebih mulus pada main content */
         #mainContent {
