perbaiki scrollhide di suport ticket

--- a/src/views/pages/malaysia/supportticket.html
+++ b/src/views/pages/malaysia/supportticket.html
@@ -65,7 +65,7 @@
                 </a>
             </div>
 
-            <div class="flex-grow overflow-y-auto">
+            <div class="flex-grow overflow-y-auto scrollbar-hide">
                 <div class="p-4">
                     <div>
                         <a href="#loggedinMenu" data-menu-toggle class="flex items-center justify-between w-full">
